--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
+    "figlet": "^1.9.3",
+    "inquirer": "^12.10.0",
+    "ora": "^9.0.0",
     "prisma": "^6.18.0"
   }
 }
