--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,9 +33,12 @@
     // "noPropertyAccessFromIndexSignature": true,
 
     // Recommended Options
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
     "strict": true,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
+
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
